--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
+    "graphql": "^15.3.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
     "react-native-svg": "^12.1.0",
@@ -25,12 +33,16 @@
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
+    "babel-plugin-inline-import": "^3.0.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.0.4",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
+  },
+  "resolutions": {
+    "graphql": "15.3.0"
   },
   "jest": {
     "preset": "react-native",
