--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "apollo-boost": "^0.4.9",
     "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^1.1.13",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
+    "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.10.2",
+    "react-native-safe-area-context": "^3.1.4",
+    "react-native-screens": "^2.10.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3"
   },
