--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
     "graphql": "^15.3.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-active-keyboards": "^0.0.8",
+    "react-native-braille-six-key-input": "^0.3.3",
+    "react-native-custom-keyboard-kit": "^1.0.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.10.2",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
+    "react-native-sound-player": "^0.10.4",
     "react-native-svg": "^12.1.0",
-    "react-native-svg-transformer": "^0.14.3"
+    "react-native-svg-transformer": "^0.14.3",
+    "react-navigation-transitions": "^1.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -37,6 +43,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.1",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
@@ -46,11 +53,17 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.0.4",
+    "react-native-dotenv": "^2.3.0",
     "react-test-renderer": "16.13.1",
     "typescript": "^3.8.3"
   },
   "resolutions": {
     "graphql": "15.3.0"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/assets/fonts"
+    ]
   },
   "jest": {
     "preset": "react-native",
